[gd_scene load_steps=2 format=3 uid="uid://c5o5jnl1b5mp7"]

[ext_resource type="Script" path="res://basic.gd" id="1_qvr0x"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_qvr0x")

[node name="Panel" type="Panel" parent="."]
offset_top = 96.0
offset_right = 864.0
offset_bottom = 504.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_top = 616.0
offset_right = 896.0
offset_bottom = 648.0
text = "Notificaciones"
scroll_active = false
shortcut_keys_enabled = false

[node name="Button" type="Button" parent="."]
offset_left = 960.0
offset_top = 96.0
offset_right = 1080.0
offset_bottom = 127.0
focus_neighbor_top = NodePath("../LineEdit")
focus_neighbor_bottom = NodePath("../Button2")
text = "AÃ±adir"

[node name="Button2" type="Button" parent="."]
offset_left = 960.0
offset_top = 160.0
offset_right = 1080.0
offset_bottom = 191.0
focus_neighbor_top = NodePath("../Button")
focus_neighbor_bottom = NodePath("../Button3")
text = "Eliminar"

[node name="Button3" type="Button" parent="."]
offset_left = 960.0
offset_top = 224.0
offset_right = 1080.0
offset_bottom = 255.0
focus_neighbor_top = NodePath("../Button2")
text = "Modificar"

[node name="ItemList" type="ItemList" parent="."]
offset_top = 96.0
offset_right = 864.0
offset_bottom = 504.0
item_count = 1
item_0/text = "bananas"

[node name="LineEdit" type="LineEdit" parent="."]
offset_right = 896.0
offset_bottom = 40.0
focus_neighbor_right = NodePath("../Button")
focus_neighbor_bottom = NodePath("../ItemList")
placeholder_text = "Buscar"
clear_button_enabled = true
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="item_activated" from="ItemList" to="." method="_on_item_list_item_activated"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
